// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "default_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.allowClear: false - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": false,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.allowClear: false_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": true,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": false,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.bordered: false_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": true,
      "id": "properties.disabled: true_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 12 - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label span: 12_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.maxLength: 4 - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.maxLength: 4_input",
      "maxLength": 4,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Type your text here - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.placeholder: Type your text here_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": "Type your text here",
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefix: Prefix to the text - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefix: Prefix to the text_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": "Prefix to the text",
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon.size: 24 - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefixIcon.size: 24_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": <IconComp1
        basePath=""
        blockId="properties.prefixIcon.size: 24_prefixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "AccountBookFilled",
            "size": 24,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon: AccountBookFilled - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefixIcon: AccountBookFilled_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": <IconComp1
        basePath=""
        blockId="properties.prefixIcon: AccountBookFilled_prefixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: large_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": "large",
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: small_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": "small",
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffix: Suffix to the text - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffix: Suffix to the text_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": "Suffix to the text",
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon.size 24 - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffixIcon.size 24_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": <IconComp1
        basePath=""
        blockId="properties.suffixIcon.size 24_suffixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "name": "AlertFilled",
            "size": 24,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon: AlertFilled - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffixIcon: AlertFilled_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": <IconComp1
        basePath=""
        blockId="properties.suffixIcon: AlertFilled_suffixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AlertFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: My TextInput Title - value[0] - TextInput 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.title: My TextInput Title_input",
      "maxLength": undefined,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;
